--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Initially taken from Github's Python gitignore file
 
+# ignore the try-EncoderDecoder branch
+./examples/EncoderDecoderModel/
+
+# ignore the try-seq2seq branch
+./examples/seq2seq/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
