--- a/examples/EncoderDecoderModel/.gitignore
+++ b/examples/EncoderDecoderModel/.gitignore
@@ -2,7 +2,7 @@
 *cache*
 
 # Ignore the esnli model trained on esnli_train.csv
-esnli_train_trained_model/
+*esnli_train_trained_model*
 
 # Ignore the sanity checks
 sanity-checks/
