initial try of extracting eval from jupyter notebook

--- a/examples/EncoderDecoderModel/.gitignore
+++ b/examples/EncoderDecoderModel/.gitignore
@@ -1,8 +1,9 @@
 *log*
 *cache*
+*checkpoint*
 
 # Ignore the esnli model trained on esnli_train.csv
-*esnli_train_trained_model*
+*_train_trained_model*
 
 # Ignore the sanity checks
 sanity-checks/
