--- a/examples/EncoderDecoderModel/.gitignore
+++ b/examples/EncoderDecoderModel/.gitignore
@@ -14,3 +14,4 @@ sanity-checks/
 # Ignore files that are too large
 *eval_on_train_expl_text_in_esnli_train_format.csv
 *eval_on_train_expl_embed.csv
+*eval_on_esnli125k_train_gen_embeddings.csv
