--- a/examples/EncoderDecoderModel/.gitignore
+++ b/examples/EncoderDecoderModel/.gitignore
@@ -3,7 +3,7 @@
 *checkpoint*
 
 # Ignore the generated embedding files that were not renamed
-*epoch*_*_*.csv
+*epoch[0-9]*_*_*.csv
 
 # Ignore the esnli model trained on esnli_train.csv
 *_train_trained_model*
